[package]
name = "elabs-crypto"
authors = ["Ade m Ramdani <noobiescoder@gmail.com>"]
license = "GPL-3.0"
description = "Elabs Crypto"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pentalabs/elabs/tree/master/elabs-crypto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = "0.21.2"
rand = "0.8.0"
hex = "0.4"
elabs-k256 = {path = "../elabs-k256", version = "0.1.0"}
