[package]
name = "elabs-crypto"
author = ["Pentalabs Core Dev", "Ade M Ramdani <noobiescoder@gmail.com>"]
description = "Elabs crypto package: crypto utilities"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version = "0.21.2", features = ["std", "recovery"]}
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
rand = "0.8.0"
hex = "0.4"
