[package]
name = "elabs-k256"
authors = ["Ade m Ramdani <noobiescoder@gmail.com>"]
license = "GPL-3.0"
description = "Elabs K256: Keccak-256 wrapper"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/pentalabs/elabs/tree/master/elabs-k256"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
