[package]
name = "elabs-solc"
authors = ["Ade m Ramdani <noobiescoder@gmail.com>"]
license = "GPL-3.0"
description = "Elabs Solc: The solc wrapper"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pentalabs/elabs/tree/master/elabs-solc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
